LDEV-4054 updating English, Greek and Spanish

--- a/lams_tool_bbb/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_bbb/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = bbb
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:30:29 CST 2016 
  
 #=================== labels for Web conferencing =================# 
 
@@ -16,11 +16,9 @@ pageTitle.authoring  =Creaci\u00f3n de la video conferencia
 pageTitle.monitoring  =Seguimiento video conferencia
 button.basic  =B\u00e1sico
 button.advanced  =Avanzado
-button.upload  =Subir
 button.cancel  =Cancelar
 button.save  =Guardar
 button.finish  =Finalizar
-button.instructions  =Instrucciones
 button.continue  =Continuar
 button.edit  =Editar
 button.try.again  =Intente nuevamente
@@ -29,7 +27,6 @@ button.editActivity  =Editar la actividad
 button.statistics  =Estad\u00edstica
 button.close  =Cerrar
 label.authoring.basic.title  =T\u00edtulo
-label.attachments  =Archivos adjuntos
 label.view  =Ver
 label.notAvailable  =No est\u00e1 disponible
 label.save  =Guardar
@@ -44,12 +41,8 @@ label.monitoring.startConference  =Inicio Conferencia
 label.learning.joinConference  =Unirse a la conferencia
 label.learning.conferenceNotAvailable  =La Video conferencia a\u00fan no est\u00e1 disponible ya que el instructor no la ha comenzado. Por favor, consulte a su instructor para m\u00e1s detalles.
 label.refresh  =Refrescar
-label.download  =Descargar
-label.delete  =Borrar
 label.cancel  =Cancelar
-message.unsavedChanges  =La p\u00e1gina contiene cambios no guardados
 message.defineLaterSet  =Por favor, espere a que el profesor para completar los contenidos de esta actividad
-message.runOfflineSet  =Esta actividad no se realiza en el ordenador. Por favor, consulte a su profesor para m\u00e1s detalles.
 message.learner.blank.input  =No has escrito nada. \u00bfEst\u00e1s seguro de que esto es correcto?
 message.alertContentEdit  =Advertencia: uno o m\u00e1s estudiantes ha accedido a esta actividad. El cambio de este contenido puede producir confusi\u00f3n en estudiantes que reciben una informaci\u00f3n diferente.
 message.warnLockOnFinish  =Nota: Despu\u00e9s de hacer clic en "Finalizar", usted no ser\u00e1 capaz de seguir participando.
@@ -65,10 +58,6 @@ error.mandatoryField  ={0} campo es obligatorio.
 error.optionalField  ={0} ha dejado en blanco.
 advanced.lockOnFinished  =No permitir modificaciones una vez terminado
 advanced.reflectOnActivity  =A\u00f1adir anotaciones al finalizar la video conferencia con las siguientes instrucciones
-instructions.uploadOfflineInstr  =Archivos con instrucciones offline
-instructions.uploadOnlineInstr  =Archivos con instrucciones online
-instructions.offlineInstructions  =Instrucciones para modo offline
-instructions.onlineInstructions  =Instrucciones para modo online
 authoring.msg.cancel.save  =\u00bfQuieres cerrar la ventana sin guardar los cambios?
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
 monitor.summary.bbbSettings  =Configuraci\u00f3n de la video conferencia
@@ -77,9 +66,10 @@ config.serverURL  =Direcci\u00f3n URL del servidor Big Blue Button
 config.securitySalt.notice  =Tenga en cuenta que "security salt" es fundamental. Esta security salt es una palabra clave que se utiliza para asegurar que las salas de conferencias web s\u00f3lo puede ser creado a partir de este sitio web.
 config.securitySalt.notice2  =IMPORTANTE: NO PERMITA QUE LOS USUARIOS FINALES CONOZCAN SU SECURITY SALT O BIEN SU SEGURIDAD SE VERA COMPROMETIDA. V\u00e9ase el sitio web para m\u00e1s detalles BigBlueButton
 config.securitySalt  =Security Salt
-export.toolExportNotSupported  =Esta herramienta no es compatible con export portfolio.
 message.unableToStartLesson  =No se puede participar en la conferencia. Por favor, consulte con su profesor.
 button.submit  =Finalizar
+message.monitoring.summary.no.session  =No hay sesiones disponibles
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 74 labels for es ES =====
+#======= End labels: Exported 64 labels for es ES =====
