--- a/lams_tool_bbb/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_bbb/conf/language/lams/ApplicationResources.properties
@@ -2,14 +2,14 @@ appName = bbb
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:31:19 CST 2016 
  
 #=================== labels for Web conferencing =================# 
 
 tool.display.name  =Web Conference
 tool.description  =The Web Conferencing tool provides document, whiteboard and desktop sharing through the browser.
 activity.title  =Web Conference
-activity.description  =Web Conference Tool
+activity.description  =Web Conference tool
 activity.helptext  =Web Conference
 activity.welcome.message  =Welcome to Web Conference
 pageTitle.authoring  =Web Conference Authoring
@@ -21,24 +21,24 @@ button.save  =Save
 button.finish  =Next Activity
 button.continue  =Continue
 button.edit  =Edit
-button.try.again  =Try Again
+button.try.again  =Try again
 button.summary  =Summary
 button.editActivity  =Edit Activity
 button.statistics  =Statistics
 button.close  =Close
 label.authoring.basic.title  =Title
 label.view  =View
-label.notAvailable  =Not Available
+label.notAvailable  =Not available
 label.save  =Save
 label.created  =Created
 label.lastModified  =Last modified
 label.notebookEntry  =Notebook entry
 label.authoring.basic.instructions  =Instructions
-label.authoring.basic.bbbSettings  =Web Conference Settings
+label.authoring.basic.bbbSettings  =Web Conference settings
 label.on  =On
 label.off  =Off
-label.monitoring.startConference  =Start Conference
-label.learning.joinConference  =Join Conference
+label.monitoring.startConference  =Start conference
+label.learning.joinConference  =Join conference
 label.learning.conferenceNotAvailable  =The Web Conference is not available yet as your instruction hasn't started. Please see your instructor for further details.
 label.refresh  =Refresh
 label.cancel  =Cancel
@@ -49,25 +49,27 @@ message.warnLockOnFinish  =Note: After you click on "Next Activity", you won't b
 message.activityLocked  =You won't be able to continue participating in the conference after you have completed.
 message.no.reflection.available  =Notebook not available
 message.endMeeting  =The meeting room is now closed.  You can continue with your sequence.
-heading.totalLearners  =Number of Learners
-heading.totalLearnersInGroup  =Total Number of Learners in Group
-heading.totalFinishedLearnersInGroup  =Number of Finished Learners
+heading.totalLearners  =Number of learners
+heading.totalLearnersInGroup  =Total number of learners in group
+heading.totalFinishedLearnersInGroup  =Number of finished learners
 heading.learner  =Learner
-heading.notebookEntry  =Notebook Entry
+heading.notebookEntry  =Notebook entry
 error.mandatoryField  ={0} field is mandatory.
 error.optionalField  ={0} has been left blank.
 advanced.lockOnFinished  =Lock when finished
 advanced.reflectOnActivity  =Add a notebook at end of Web Conference with the following instructions
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 monitor.summary.th.advancedSettings  =Advanced settings
-monitor.summary.bbbSettings  =Web Conference Settings
+monitor.summary.bbbSettings  =Web Conference settings
 admin.title  =Web Conference Administration
-config.serverURL  =Big Blue Button Server URL
+config.serverURL  =Big Blue Button server URL
 config.securitySalt.notice  =Note that "Security Salt" is required. This Security Salt is a keyword that is used to ensure that web conference rooms can only be created from this website.
 config.securitySalt.notice2  =IMPORTANT: DO NOT ALLOW END USERS TO KNOW YOUR SECURITY SALT OR ELSE YOUR SECURITY WILL BE COMPROMISED. See BigBlueButton website for details
-config.securitySalt  =Security Salt
+config.securitySalt  =Security salt
 message.unableToStartLesson  =Unable to join meeting.  Please see your instructor.
 button.submit  =Finish
-message.monitoring.summary.no.session  =No Session Available
-label.activity.completion=End of Activity
-#======= End labels: Exported 63 labels for en AU =====
+message.monitoring.summary.no.session  =No session available
+label.activity.completion  =End of activity
+
+
+#======= End labels: Exported 64 labels for en AU =====
