--- a/lams_tool_bbb/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_bbb/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = bbb
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:30:30 CST 2016 
  
 #=================== labels for Web conferencing =================# 
 
@@ -16,11 +16,9 @@ pageTitle.authoring  =\u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03a4\u0
 pageTitle.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7 \u03bc\u03ad\u03c3\u03c9 Web
 button.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 button.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-button.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 button.cancel  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
 button.save  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 button.finish  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
-button.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 button.continue  =\u03a3\u03c5\u03bd\u03b5\u03c7\u03af\u03c3\u03c4\u03b5
 button.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 button.try.again  =\u03a0\u03c1\u03bf\u03c3\u03c0\u03b1\u03b8\u03ae\u03c3\u03c4\u03b5 \u03be\u03b1\u03bd\u03ac
@@ -29,7 +27,6 @@ button.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03
 button.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
 button.close  =\u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf
 label.authoring.basic.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2
-label.attachments  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03b1
 label.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
 label.notAvailable  =\u039c\u03b7 \u0394\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03bf
 label.save  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
@@ -44,12 +41,8 @@ label.monitoring.startConference  =\u0388\u03bd\u03b1\u03c1\u03be\u03b7 \u03a4\u
 label.learning.joinConference  =\u03a3\u03c5\u03bc\u03bc\u03b5\u03c4\u03bf\u03c7\u03ae \u03c3\u03c4\u03b7\u03bd \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7
 label.learning.conferenceNotAvailable  =\u0397 \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7 \u03bc\u03ad\u03c3\u03c9 Web \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03b9 \u03b1\u03ba\u03cc\u03bc\u03b7. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c1\u03c9\u03c4\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03bd \u03b5\u03c0\u03cc\u03c0\u03c4\u03b7 - \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 label.refresh  =\u0391\u03bd\u03b1\u03bd\u03ad\u03c9\u03c3\u03b7
-label.download  =\u039b\u03ae\u03c8\u03b7
-label.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
 label.cancel  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
-message.unsavedChanges  =\u0397 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c0\u03b5\u03c1\u03b9\u03ad\u03c7\u03b5\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c0\u03bf\u03c5 \u03b4\u03b5\u03bd \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03b8\u03b5\u03af
 message.defineLaterSet  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03b3\u03b9\u03b1 \u03c4\u03bf\u03bd \u03b5\u03c0\u03cc\u03c0\u03c4\u03b7 - \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03c3\u03b1\u03c2 \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-message.runOfflineSet  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b3\u03af\u03bd\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c1\u03c9\u03c4\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 message.learner.blank.input  =\u0394\u03b5\u03bd \u03ad\u03c7\u03b5\u03c4\u03b5 \u03b3\u03c1\u03ac\u03c8\u03b5\u03b9 \u03c4\u03af\u03c0\u03bf\u03c4\u03b1. \u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b1\u03c5\u03c4\u03cc \u03b5\u03af\u03bd\u03b1\u03b9 \u03c3\u03c9\u03c3\u03c4\u03cc;
 message.alertContentEdit  =\u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7: \u0388\u03bd\u03b1\u03c2 \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03ad\u03c7\u03bf\u03c5\u03bd \u03ae\u03b4\u03b7 \u03c6\u03b8\u03ac\u03c3\u03b5\u03b9 \u03ae \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9  \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1. \u0397 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ae \u03b1\u03c5\u03c4\u03bf\u03cd \u03c4\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b8\u03b1 \u03ad\u03c7\u03b5\u03b9 \u03c9\u03c2 \u03b1\u03c0\u03bf\u03c4\u03ad\u03bb\u03b5\u03c3\u03bc\u03b1 \u03b4\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03bf\u03af \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03bd\u03b1 \u03bb\u03ac\u03b2\u03bf\u03c5\u03bd \u03b4\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03ad\u03c2 \u03c0\u03bb\u03b7\u03c1\u03bf\u03c6\u03bf\u03c1\u03af\u03b5\u03c2.
 message.warnLockOnFinish  =\u03a3\u03b7\u03bc\u03b5\u03af\u03c9\u03c3\u03b7: \u0391\u03c6\u03bf\u03cd \u03ba\u03ac\u03bd\u03b5\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03bf "\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1", \u03b4\u03b5\u03bd \u03b8\u03b1 \u03b5\u03af\u03c3\u03c4\u03b5 \u03c3\u03b5 \u03b8\u03ad\u03c3\u03b7 \u03bd\u03b1 \u03c3\u03c5\u03bd\u03b5\u03c7\u03af\u03c3\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03c3\u03c5\u03bc\u03bc\u03b5\u03c4\u03ad\u03c7\u03b5\u03c4\u03b5\u03c4 \u03c3\u03c4\u03b7\u03bd \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7.
@@ -65,10 +58,6 @@ error.mandatoryField  ={0} \u03c0\u03b5\u03b4\u03af\u03b1 \u03b5\u03af\u03bd\u03
 error.optionalField  ={0} \u03c0\u03b5\u03b4\u03af\u03b1 \u03ad\u03c7\u03b5\u03b9 \u03bc\u03b5\u03af\u03bd\u03b5\u03b9 \u03ba\u03b5\u03bd\u03ac.
 advanced.lockOnFinished  =\u039d\u03b1 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03cc\u03c4\u03b1\u03bd \u03c4\u03b5\u03bb\u03b5\u03b9\u03ce\u03c3\u03bf\u03c5\u03bd
 advanced.reflectOnActivity  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5 \u03c3\u03c4\u03bf \u03c4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7\u03c2 \u03bc\u03b5 \u03c4\u03b9\u03c2 \u03b1\u03ba\u03cc\u03bb\u03bf\u03c5\u03b8\u03b5\u03c2 \u03bf\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
-instructions.uploadOfflineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOnlineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.offlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.onlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03bc\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
 authoring.msg.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7;
 monitor.summary.th.advancedSettings  =\u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2 \u03b3\u03b9\u03b1 \u03c0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03bf\u03c5\u03c2
 monitor.summary.bbbSettings  =\u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2 \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7\u03c2
@@ -77,8 +66,10 @@ config.serverURL  =\u0394\u03b9\u03b5\u03cd\u03b8\u03c5\u03bd\u03c3\u03b7 \u03c4
 config.securitySalt.notice  =\u03a3\u03b7\u03bc\u03b5\u03b9\u03ce\u03c3\u03c4\u03b5 \u03cc\u03c4\u03b9 \u03bf "\u039a\u03c9\u03b4\u03b9\u03ba\u03cc\u03c2 \u0391\u03c3\u03c6\u03ac\u03bb\u03b5\u03b9\u03b1\u03c2" \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c0\u03b1\u03c1\u03b1\u03af\u03c4\u03b7\u03c4\u03cc\u03c2. \u0391\u03c5\u03c4\u03cc\u03c2 \u03bf \u039a\u03c9\u03b4\u03b9\u03ba\u03cc\u03c2 \u0391\u03c3\u03c6\u03ac\u03bb\u03b5\u03b9\u03b1\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03bc\u03b9\u03b1 \u03bb\u03ad\u03be\u03b7-\u03ba\u03bb\u03b5\u03b9\u03b4\u03af \u03c0\u03bf\u03c5 \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03b5\u03af\u03c4\u03b1\u03b9 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b5\u03be\u03b1\u03c3\u03c6\u03b1\u03bb\u03af\u03c3\u03b5\u03b9 \u03cc\u03c4\u03b9 \u03c4\u03bf \u03b4\u03c9\u03bc\u03ac\u03c4\u03b9\u03bf \u03c4\u03b7\u03c2 \u03c4\u03b7\u03bb\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c8\u03b7\u03c2 \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b4\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03b7\u03b8\u03b5\u03af \u03bc\u03cc\u03bd\u03bf \u03b1\u03c0\u03cc \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7\u03bd \u03b9\u03c3\u03c4\u03bf\u03c3\u03b5\u03bb\u03af\u03b4\u03b1.
 config.securitySalt.notice2  =\u03a3\u0397\u039c\u0391\u039d\u03a4\u0399\u039a\u039f: \u039c\u0397 \u0394\u0399\u039d\u0395\u03a4\u0395 \u03a3\u03a4\u039f\u03a5\u03a3 \u03a7\u03a1\u0397\u03a3\u03a4\u0395\u03a3 \u03a4\u039f\u039d \u039a\u03a9\u0394\u0399\u039a\u039f \u0391\u03a3\u03a6\u0391\u039b\u0395\u0399\u0391\u03a3 \u0393\u0399\u0391 \u039d\u0391 \u0394\u0399\u0391\u03a3\u03a6\u0391\u039b\u0399\u03a3\u0395\u03a4\u0395 \u03a4\u0397\u039d \u03a4\u0397\u039b\u0395\u0394\u0399\u0391\u03a3\u039a\u0395\u03a8\u0397 \u03a3\u0391\u03a3. \u0394\u03b5\u03af\u03c4\u03b5 \u03c4\u03b7\u03bd \u03b9\u03c3\u03c4\u03bf\u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c4\u03bf\u03c5 BigBlueButton \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2
 config.securitySalt  =\u039a\u03c9\u03b4\u03b9\u03ba\u03cc\u03c2 \u0391\u03c3\u03c6\u03ac\u03bb\u03b5\u03b9\u03b1\u03c2
-export.toolExportNotSupported  =\u0391\u03c5\u03c4\u03cc \u03c4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03c5\u03c0\u03bf\u03c3\u03c4\u03b7\u03c1\u03af\u03b6\u03b5\u03b9 \u03c4\u03b7\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c4\u03bf\u03c5 \u03c6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u03b5\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd.
 message.unableToStartLesson  =\u0397 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7 \u03c3\u03c4\u03b7\u03bd \u03a4\u03b7\u03bb\u03b5\u03b4\u03b9\u03ac\u03c3\u03ba\u03b5\u03c6\u03b7 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b4\u03c5\u03bd\u03b1\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03c0\u03b9\u03ba\u03bf\u03b9\u03bd\u03c9\u03bd\u03ae\u03c3\u03c4\u03b5 \u03bc\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03c3\u03b1\u03c2.
+button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+message.monitoring.summary.no.session  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03b7 \u03c3\u03c5\u03bd\u03b5\u03b4\u03c1\u03af\u03b1
+label.activity.completion  =*** \u039b\u03b5\u03af\u03c0\u03b5\u03b9 \u03bc\u03b5\u03c4\u03ac\u03c6\u03c1\u03b1\u03c3\u03b7 ***
 
 
-#======= End labels: Exported 73 labels for el GR =====
+#======= End labels: Exported 64 labels for el GR =====
