LDEV-4054 updating English, Greek and Spanish

--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,27 +2,27 @@ appName = imscc
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:03:26 CST 2016 
  
 #=================== labels for IMS Common Cartridge =================# 
 
 label.authoring.basic.resource.common.cartridge  =Common Cartridge
 label.authoring.basic.add.common.cartridge  =Add Common Cartridge
 label.authoring.basic.upload.common.cartridge  =Upload Common Cartridge
-label.authoring.basic.add.basiclti.tool  =Add Basic LTI Tool
+label.authoring.basic.add.basiclti.tool  =Add Basic LTI tool
 admin.button.save  =Save
-admin.expose.user.name  =Expose User Name to Basic LTI Tool
-admin.expose.user.email  =Expose User Email to Basic LTI Tool
-admin.page.title  =BasicLTI Settings
+admin.expose.user.name  =Expose User Name to Basic LTI tool
+admin.expose.user.email  =Expose User Email to Basic LTI tool
+admin.page.title  =BasicLTI settings
 admin.return  =Return to maintain LAMS
 admin.success  =Configuration successfully saved.
-label.authoring.basic.bascilti.url  =Remote Tool Url
-label.authoring.basic.bascilti.key  =Remote Tool Key
-label.authoring.basic.bascilti.secret  =Remote Tool Secret
-label.authoring.basic.bascilti.button.text  =Button Text
-label.authoring.basic.bascilti.iframe.height  =Frame Height
-label.authoring.basic.bascilti.custom.parameters  =Custom Parameters (*each starts new line)
-label.authoring.select.available.resources  =Select Available resources
+label.authoring.basic.bascilti.url  =Remote tool URL
+label.authoring.basic.bascilti.key  =Remote tool key
+label.authoring.basic.bascilti.secret  =Remote tool secret
+label.authoring.basic.bascilti.button.text  =Button text
+label.authoring.basic.bascilti.iframe.height  =Frame height
+label.authoring.basic.bascilti.custom.parameters  =Custom parameters (*each starts new line)
+label.authoring.select.available.resources  =Select available resources
 label.authoring.advanced.settings  =Advanced settings
 label.authoring.done  =Done
 warning.msg.authoring.do.you.want.to.delete  =Do you really want to delete this resource?
@@ -31,7 +31,6 @@ activity.description  =Sharing resources with others.
 activity.helptext  =Uploading your resources to share with others.
 activity.title  =Common Cartridge
 appName  =Common Cartridge
-authoring.exception  =There is a problem in shared resources authoring page, the reason is {0}
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 button.add  =Add
 button.cancel  =Cancel
@@ -40,68 +39,37 @@ button.edit  =Edit
 button.try.again  =Try again
 button.upload  =Upload
 define.later.message  =Please wait for the teacher to complete the contents of this activity.
-error.attachment.executable  =The uploaded file is executable, please zip it before uploading.
-error.inputFileTooLarge  =Input File size is too large!
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 error.msg.file.not.found  =File not found exception occurs when uploading file.
-error.msg.ims.application  =ImscpApplicationException occurs when uploading resource item file.
-error.msg.ims.package  =Invalid IMS CP format.
-error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
 error.msg.io.exception  =IOException occurs when uploading file.
-error.msg.repository  =A repository error occurred while trying to upload the file.
-error.msg.upload.file.not.found  =Could not find upload file {0}.
-error.msg.website.no.initial.file  =Website zip can not find out initial file (index.htm/html or default.htm/html).
 error.msg.zip.file.exception  =Could not handle zip file when uploading file.
-errorPage.heading  =Some error occurs when handling your request
-errorPage.title  =Error page
 error.planner.file.blank  =In resource {0} file can not be blank.
 error.planner.no.resource.save  =There has to be at least one resource to save.
 error.planner.url.blank  =In resource {0} URL can not be blank.
-error.reflection.emtpy  =Please input Notebook Entry
 error.resource.item.desc.blank  =Comment/Instruction can not be blank
 error.resource.item.file.blank  =File can not be blank.
 error.resource.item.invalid.url  =Invalid URL format.
 error.resource.item.title.blank  =Title can not be blank.
 error.resource.item.url.blank  =URL can not be blank.
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.title.empty  =Title can not be blank
 error.upload.failed  =Upload file failed: {0}
-error.uploading  =error uploading
-error.valueReqd  =Value Required
-event.assigment.submit.body  =The learner {0} submitted an assigment in a Common Cartridge tool.\n\nThis message was sent automatically, following the tool''''s advanced settings.
-event.assigment.submit.subject  =LAMS: A learner submitted an assigment in a Common Cartridge tool
-export.init.resource  =Initial Resources
-export.label.no.learning.object  =No offline package available
-export.label.resource  =Resource
-export.title  =Export portfolio of Common Cartridge
-label.authoring.advance.allow.learner.add.files  =Allow learners to add Files
-label.authoring.advance.allow.learner.add.urls  =Allow learners to add URLs
-label.authoring.advanced.notify.onassigmentsubmit  =Notify monitoring teachers when a learner submits a resource
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Common Cartridge with the following instructions:
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.advance.mini.number.resources.view  =Minimum number of resources to view
 label.authoring.advance.run.content.auto  =Run content automatically (only available if there is exactly one resource)
 label.authoring.basic.add.file  =Add Common Cartridge
-label.authoring.basic.add.learning.object  =Add IMS Content Package
 label.authoring.basic.add.url  =Add Basic LTI
-label.authoring.basic.add.website  =Add Zipped Website
 label.authoring.basic.instruction  =Instructions
-label.authoring.basic.resource.add.instruction  =Add Instruction
 label.authoring.basic.resource.delete  =Delete
-label.authoring.basic.resource.description.input  =Description
 label.authoring.basic.resource.edit  =Edit
 label.authoring.basic.resource.file  =File
-label.authoring.basic.resource.file.input  =File
 label.authoring.basic.resource.instructions  =Instructions
 label.authoring.basic.resource.learning.object  =IMS CP
-label.authoring.basic.resource.list.title  =Resource List
+label.authoring.basic.resource.list.title  =Resource list
 label.authoring.basic.resource.preview  =Preview
 label.authoring.basic.resource.title.input  =Title
 label.authoring.basic.resource.url  =Basic LTI
-label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.verify.url  =View
 label.authoring.basic.resource.website  =Website
-label.authoring.basic.resource.zip.file.input  =Zip file:
 label.authoring.basic.title  =Title
 label.authoring.cancel.button  =Cancel
 label.authoring.heading  =Common Cartridge Authoring
@@ -109,41 +77,25 @@ label.authoring.heading.advance  =Advanced
 label.authoring.heading.advance.desc  =Please input advance options for common cartridge
 label.authoring.heading.basic  =Basic
 label.authoring.heading.basic.desc  =Basic input information for common cartridge
-label.authoring.offline.filelist  =Offline file list
-label.authoring.online.filelist  =Online file list
 label.authoring.save.button  =Save
 label.author.title  =Common Cartridge
 label.cancel  =Cancel
-label.check.for.new  =Check for new
 label.completed  =Completed
 label.continue  =Continue
 label.delete  =Delete
-label.description  =Description:
-label.down  =Move down
-label.download  =Download
 label.edit  =Edit
-label.export.reflection  =Notebook Entries
 label.finish  =Finished
 label.finished  =Next Activity
 label.hide  =Hide
-label.learning.comment.or.instruction  =Comment/Instruction
-label.learning.heading  =Common Cartridge
 label.learning.minimum.review  =You must view at least {0} of the resources.
-label.learning.new.file  =New file details:
-label.learning.new.url  =New URL details:
 label.learning.title  =Common Cartridge Learning
-label.monitoring.edit.activity.cancel  =Cancel
 label.monitoring.edit.activity.edit  =Edit
-label.monitoring.edit.activity.update  =Update
 label.monitoring.heading.access  =Learners list
-label.next.instruction  =Next Instruction
 label.off  =Off
 label.on  =On
-label.open  =Open
 label.resoruce.to.review  =Resources to view
 label.save  =Save
 label.show  =Show
-label.suggest.new  =Suggest a new
 label.up  =Move Up
 label.view  =View
 lable.learning.minimum.view.number.less  =You must view at least another {0} of the resources.
@@ -152,23 +104,16 @@ message.alertContentEdit  =Warning: One of more learners have accessed this acti
 message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
 message.monitoring.summary.no.resource.for.group  =No resource available for this group.
 message.monitoring.summary.no.session  =No Session Available
-message.msg.maxFileSize  =Max 250K
 message.no.reflection.available  =No notebook available
-message.step.of  =Step {0} of {1}
 message.warnLockOnFinish  =Note: After you click on "Next Activity", if you come back to this Common Cartridge, you won't be able to share new resources.
 monitoring.label.access.time  =Access time
 monitoring.label.group  =Group
-monitoring.label.hidden  =Hidden
 monitoring.label.hide  =Hide
-monitoring.label.instructions  =Instructions
-monitoring.label.number.learners  =Number of Learners
+monitoring.label.number.learners  =Number of learners
 monitoring.label.show  =Show
-monitoring.label.suggest  =Suggested By
 monitoring.label.title  =Title
 monitoring.label.type  =Type
-monitoring.label.user.loginname  =Login name
 monitoring.label.user.name  =Name
-monitoring.summary.note  =Note: number of learners is the number of learners who have viewed the resource.
 monitoring.tab.edit.activity  =Edit Activity
 monitoring.tab.statistics  =Statistic
 monitoring.tab.summary  =Summary
@@ -177,14 +122,15 @@ monitoring.user.reflection  =Notebook Entry
 monitor.summary.td.addNotebook  =Add a notebook at end of Common Cartridge
 monitor.summary.td.notebookInstructions  =Notebook instructions
 monitor.summary.th.advancedSettings  =Advanced settings
-msg.no.instruction  =No instruction available.
 open.in.new.window  =Open URL in pop-up
 page.title.monitoring.view.reflection  =View Notebook Entries
 title.reflection  =Notebook Entry
 tool.description  =Tool for sharing resources.
-tool.display.name  =Common Cartridge Tool
+tool.display.name  =Common Cartridge tool
 label.submit  =Finish
 label.monitoring.heading  =Common Cartridge Monitoring
+label.resource.options  =Resource options
+label.activity.completion  =End of activity
 
 
-#======= End labels: Exported 179 labels for en AU =====
+#======= End labels: Exported 125 labels for en AU =====
