--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:03:51 CST 2016 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -31,7 +31,6 @@ activity.description  =Compartir los recursos con los dem\u00e1s.
 activity.helptext  =Carga de los recursos para compartir con los dem\u00e1s.
 activity.title  =Common Cartridge
 appName  =Common Cartridge
-authoring.exception  =Hay un problema en la p\u00e1gina de autor\u00eda compartida de recursos, la raz\u00f3n es {0}
 authoring.msg.cancel.save  =\u00bfQuieres cerrar la ventana sin guardar los cambios?
 button.add  =A\u00f1adir
 button.cancel  =Cancelar
@@ -40,68 +39,37 @@ button.edit  =Editar
 button.try.again  =Int\u00e9ntelo de nuevo
 button.upload  =Subir
 define.later.message  =Por favor, espere a que el profesor para completar los contenidos de esta actividad.
-error.attachment.executable  =El archivo subido es ejecutable, por favor, comprimirla antes de subir.
-error.inputFileTooLarge  =Tama\u00f1o de archivo de entrada es demasiado grande!
 error.msg.default.content.not.find  =No se pudo recuperar el contenido por defecto para esta herramienta.
 error.msg.file.not.found  =Excepci\u00f3n de archivo no encontrado se produce cuando la carga de archivos.
-error.msg.ims.application  =ImscpApplicationException se produce al cargar el archivo de recursos item.
-error.msg.ims.package  =IMS CP formato v\u00e1lido.
-error.msg.invaid.param.upload  =InvalidParameterException se produjo al intentar cargar el archivo.
 error.msg.io.exception  =IOException se produce cuando la carga de archivos.
-error.msg.repository  =Un error de repositorio al intentar cargar el archivo.
-error.msg.upload.file.not.found  =No se pudo encontrar el archivo subido {0}.
-error.msg.website.no.initial.file  =Zip Sitio Web no puede encontrar el archivo inicial (index.htm / html o default.htm / html).
 error.msg.zip.file.exception  =No se pudo manejar el archivo zip al cargar el archivo.
-errorPage.heading  =Alg\u00fan error se produce cuando el manejo de su solicitud
-errorPage.title  =Error de la p\u00e1gina
 error.planner.file.blank  =En el recurso {0} archivo no puede estar en blanco.
 error.planner.no.resource.save  =Tiene que haber al menos un recurso para guardar.
 error.planner.url.blank  =En el recurso {0} URL no puede estar en blanco.
-error.reflection.emtpy  =Por favor, de entrada de entrada de reflexi\u00f3n
 error.resource.item.desc.blank  =Comentario/instrucciones no puede estar en blanco
 error.resource.item.file.blank  =El archivo no puede estar en blanco.
 error.resource.item.invalid.url  =Formato de URL no v\u00e1lida.
 error.resource.item.title.blank  =El t\u00edtulo no puede estar en blanco.
 error.resource.item.url.blank  =La URL no puede estar en blanco.
-errors.maxfilesize  =El archivo subido ha superado el l\u00edmite de tama\u00f1o de archivo m\u00e1ximo de {0} bytes
-error.title.empty  =El t\u00edtulo no puede estar en blanco
 error.upload.failed  =Subir archivo error: {0}
-error.uploading  =error de carga
-error.valueReqd  =Valor Requerido
-event.assigment.submit.body  =El estudiante {0} ha enviado un trabajo a la herramienta de Common Cartridge. \ N \ nEste mensaje fue enviado de forma autom\u00e1tica, despu\u00e9s de la configuraci\u00f3n avanzada herramienta de la actividad
-event.assigment.submit.subject  =LAMS: Un estudiante ha realizado un env\u00edo en una herramienta de Common Cartridge
-export.init.resource  =Los recursos iniciales
-export.label.no.learning.object  =No hay paquete disponible offline
-export.label.resource  =Recurso
-export.title  =Exportar portfolio de Common Cartridge
-label.authoring.advance.allow.learner.add.files  =Permitir a los estudiantes agregar archivos
-label.authoring.advance.allow.learner.add.urls  =Permitir a los estudiantes agregar direcciones URL
-label.authoring.advanced.notify.onassigmentsubmit  =Informe a los profesores cuando un estudiante finaliza de ver un recurso
 label.authoring.advanced.reflectOnActivity  =A\u00f1adir al final de la actividad una reflexi\u00f3n con las siguientes instrucciones:
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.advance.mini.number.resources.view  =N\u00famero m\u00ednimo de recursos para ver
 label.authoring.advance.run.content.auto  =Ejecutar el contenido de forma autom\u00e1tica (s\u00f3lo est\u00e1 disponible si hay exactamente un recurso)
 label.authoring.basic.add.file  =A\u00f1adir Common Cartridge
-label.authoring.basic.add.learning.object  =Agregar IMS Content Package
 label.authoring.basic.add.url  =A\u00f1adir LTI B\u00e1sico
-label.authoring.basic.add.website  =A\u00f1adir sitio web con cremallera
 label.authoring.basic.instruction  =Instrucciones
-label.authoring.basic.resource.add.instruction  =A\u00f1adir Instrucci\u00f3n
 label.authoring.basic.resource.delete  =Borrar
-label.authoring.basic.resource.description.input  =Descripci\u00f3n
 label.authoring.basic.resource.edit  =Editar
 label.authoring.basic.resource.file  =Archivo
-label.authoring.basic.resource.file.input  =Archivo
 label.authoring.basic.resource.instructions  =Instrucciones
 label.authoring.basic.resource.learning.object  =IMS CP
 label.authoring.basic.resource.list.title  =Lista de recursos
 label.authoring.basic.resource.preview  =Vista previa
 label.authoring.basic.resource.title.input  =T\u00edtulo
 label.authoring.basic.resource.url  =LTI B\u00e1sico
-label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.verify.url  =Ver
 label.authoring.basic.resource.website  =Sitio web
-label.authoring.basic.resource.zip.file.input  =Archivo zip:
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.cancel.button  =Cancelar
 label.authoring.heading  =Common Cartridge autor\u00eda
@@ -109,41 +77,25 @@ label.authoring.heading.advance  =Avanzado
 label.authoring.heading.advance.desc  =Ingrese opciones avanzadas para Common Cartridge
 label.authoring.heading.basic  =B\u00e1sico
 label.authoring.heading.basic.desc  =Informaci\u00f3n b\u00e1sica para Common Cartridge
-label.authoring.offline.filelist  =Lista de archivos offline
-label.authoring.online.filelist  =Lista de archivos online
 label.authoring.save.button  =Guardar
 label.author.title  =Common Cartridge
 label.cancel  =Cancelar
-label.check.for.new  =Refrescar
 label.completed  =Terminado
 label.continue  =Continuar
 label.delete  =Borrar
-label.description  =Descripci\u00f3n:
-label.down  =Mover hacia abajo
-label.download  =Descargar
 label.edit  =Editar
-label.export.reflection  =Reflexiones
 label.finish  =Finalizado
 label.finished  =Finalizar
 label.hide  =Esconder
-label.learning.comment.or.instruction  =Comentarios/instrucciones
-label.learning.heading  =Common Cartridge
 label.learning.minimum.review  =Usted debe ver al menos {0} de los recursos.
-label.learning.new.file  =Nuevos detalles de los archivos:
-label.learning.new.url  =Nuevos detalles URL:
 label.learning.title  =Common Cartridge aprendizaje
-label.monitoring.edit.activity.cancel  =Cancelar
 label.monitoring.edit.activity.edit  =Editar
-label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.heading.access  =Lista de estudiantes
-label.next.instruction  =M\u00e1s instrucciones
 label.off  =No
 label.on  =Si
-label.open  =Abrir
 label.resoruce.to.review  =Recursos para ver
 label.save  =Guardar
 label.show  =Mostrar
-label.suggest.new  =Sugerir uno nuevo
 label.up  =Mover hacia arriba
 label.view  =Ver
 lable.learning.minimum.view.number.less  =Debe ber por lo menos {0} de recursos
@@ -152,23 +104,16 @@ message.alertContentEdit  =Advertencia: Una de las m\u00e1s estudiantes ha acced
 message.monitoring.edit.activity.not.editable  =Esta actividad no es editable
 message.monitoring.summary.no.resource.for.group  =No hay recursos disponible para este grupo.
 message.monitoring.summary.no.session  =Ninguna sesi\u00f3n disponible
-message.msg.maxFileSize  =Max 250K
 message.no.reflection.available  =No ha reflexiones disponibles
-message.step.of  =Paso {0} de {1}
 message.warnLockOnFinish  =Nota: Despu\u00e9s de hacer clic en Finalizar, al volver a esta actividad no podra participar.
 monitoring.label.access.time  =Tiempo de acceso
 monitoring.label.group  =Grupo
-monitoring.label.hidden  =Oculto
 monitoring.label.hide  =Ocultar
-monitoring.label.instructions  =Instrucciones
 monitoring.label.number.learners  =N\u00famero de estudiantes
 monitoring.label.show  =Mostrar
-monitoring.label.suggest  =Sugerido por
 monitoring.label.title  =T\u00edtulo
 monitoring.label.type  =Tipo
-monitoring.label.user.loginname  =Nombre de usuario
 monitoring.label.user.name  =Nombre
-monitoring.summary.note  =Nota: n\u00famero de estudiantes es el n\u00famero de estudiantes que han visto el recurso.
 monitoring.tab.edit.activity  =Editar activity
 monitoring.tab.statistics  =Estad\u00edsticas
 monitoring.tab.summary  =Resumen
@@ -177,7 +122,6 @@ monitoring.user.reflection  =Reflexi\u00f3n
 monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
-msg.no.instruction  =No hay instrucciones disponibles.
 open.in.new.window  =Abrir URL en un pop-up
 page.title.monitoring.view.reflection  =Ver reflexiones
 title.reflection  =Reflexi\u00f3n
@@ -185,6 +129,8 @@ tool.description  =Herramienta para utilizar IMS LTI B\u00e1sica y/o IMS Common 
 tool.display.name  =Herramienta de Common Cartridge
 label.submit  =Finalizar
 label.monitoring.heading  =Seguimiento Common Cartridge
+label.resource.options  =Opciones
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 179 labels for es ES =====
+#======= End labels: Exported 125 labels for es ES =====
