LDEV-4054 updating English, Greek, Spanish, French, Norwegian, Portuguese

--- a/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,15 +2,15 @@ appName = leader
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:07:16 CST 2016 
  
 #=================== labels for Leader selection =================# 
 
 appName  =leader
 tool.display.name  =Leader Selection
-tool.description  =Leader Selection Tool
+tool.description  =Leader Selection tool
 activity.title  =Leader Selection
-activity.description  =Leader Selection Tool
+activity.description  =Leader Selection tool
 activity.helptext  =Leader Selection
 pageTitle.authoring  =Leader Selection Authoring
 button.basic  =Basic
@@ -26,8 +26,6 @@ titleHeading.summary  =Summary
 titleHeading.instructions  =Instructions
 titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit Activity
-titleHeading.exportPortfolio  =Export Portfolio
-heading.group  =Group {0}:
 heading.totalLearners  =Learners:
 heading.totalLearnersInGroup  =Total learners in group:
 heading.totalFinishedLearnersInGroup  =Finished learners:
@@ -62,4 +60,4 @@ heading.leader  =Group leader
 monitoring.label.group  =Group
 
 
-#======= End labels: Exported 54 labels for en AU =====
+#======= End labels: Exported 52 labels for en AU =====
