--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:07:15 CST 2016 
  
 #=================== labels for Leader selection =================# 
 
@@ -26,8 +26,6 @@ titleHeading.summary  =Resumen
 titleHeading.instructions  =Instrucciones
 titleHeading.statistics  =Estad\u00edsticas
 titleHeading.editActivity  =Editar actividad
-titleHeading.exportPortfolio  =Export portfolio
-heading.group  =Grupo {0}:
 heading.totalLearners  =Estudiantes:
 heading.totalLearnersInGroup  =Estudiantes en el grupo:
 heading.totalFinishedLearnersInGroup  =Estudiantes que han terminado:
@@ -62,4 +60,4 @@ heading.leader  =L\u00edder del Grupo
 monitoring.label.group  =Grupo
 
 
-#======= End labels: Exported 54 labels for es ES =====
+#======= End labels: Exported 52 labels for es ES =====
