--- a/lams_tool_leader/conf/language/lams/ApplicationResources_pt_BR.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_pt_BR.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: pt 
 #locale code: BR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:07:14 CST 2016 
  
 #=================== labels for Leader selection =================# 
 
@@ -26,8 +26,6 @@ titleHeading.summary  =Resumo
 titleHeading.instructions  =Instru\u00e7\u00f5es
 titleHeading.statistics  =Estat\u00edstica
 titleHeading.editActivity  =Editar Atividade
-titleHeading.exportPortfolio  =Exporta\u00e7\u00e3o Portfolio
-heading.group  =Grupo {0}:
 heading.totalLearners  =Os alunos:
 heading.totalLearnersInGroup  =Total de alunos em grupo:
 heading.totalFinishedLearnersInGroup  =Alunos acabados:
@@ -62,4 +60,4 @@ heading.leader  =L\u00edder do Grupo
 monitoring.label.group  =Grupo
 
 
-#======= End labels: Exported 54 labels for pt BR =====
+#======= End labels: Exported 52 labels for pt BR =====
